--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </tr>
           <tbody>
             <tr>
-              <td><img src="img/unmondesanspitie.jpg"  alt="un monde sans pitié" height="260" width="200"></td>
+              <td><img src="img/Unmondesanspitie.jpg"  alt="un monde sans pitié" height="260" width="200"></td>
               <td>
                 <h2>Un monde sans pitié</h2>
                 <h3>Pascal Rochant</h3>
