--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <img src="img/MAbeille.png" class="img-circle" alt="Photo de Mathieu Abeille">
         <h1>Mathieu Elzéar Abeille</h1>
-        <h2>Fullstack Web Developper</h2>
+        <h2>Fullstack Web Developer</h2>
         <p>Wagon Lyon - Batch 72</p>
         <p>HEC Montréal - Bachelor Of Business Administration - Marketing</p>
         <ul>
